crates/derive/tests/reactive/fail/07-attr-with-unknown-param.rs
use sorrow_derive::Reactive;

#[derive(Reactive)]
struct OuterTest {
    #[reactive(unexpected)]
    inner: InnerTest,
}

struct InnerTest {
    test_field: i32,
}

fn main() {}
